--- a/The Globe/ArticleTableViewCell.xib
+++ b/The Globe/ArticleTableViewCell.xib
@@ -18,36 +18,38 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LIK-Zf-OER">
-                        <rect key="frame" x="167.66666666666663" y="16" width="136.33333333333337" height="78"/>
+                        <rect key="frame" x="192" y="16" width="112" height="64"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="LIK-Zf-OER" secondAttribute="height" multiplier="7:4" id="1xn-Q7-nea"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="B2F-5P-3G5"/>
+                            <constraint firstAttribute="height" constant="64" id="B2F-5P-3G5"/>
+                            <constraint firstAttribute="width" constant="112" id="qE4-Pi-bIS"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tms-1n-j9c">
-                        <rect key="frame" x="16" y="16" width="135.66666666666666" height="66.666666666666671"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="AUTHOR NAME" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJs-Fb-kdn">
-                        <rect key="frame" x="16" y="94.666666666666671" width="135.66666666666666" height="19.333333333333329"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" systemColor="secondaryLabelColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="PEH-Fa-qqE">
+                        <rect key="frame" x="16" y="16" width="160" height="98"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tms-1n-j9c">
+                                <rect key="frame" x="0.0" y="0.0" width="160" height="66.666666666666671"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="AUTHOR NAME" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJs-Fb-kdn">
+                                <rect key="frame" x="0.0" y="78.666666666666671" width="160" height="19.333333333333329"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" systemColor="secondaryLabelColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="LIK-Zf-OER" firstAttribute="leading" secondItem="tms-1n-j9c" secondAttribute="trailing" constant="16" id="CxZ-Hx-NFi"/>
+                    <constraint firstItem="PEH-Fa-qqE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Lxx-dB-wt5"/>
+                    <constraint firstItem="PEH-Fa-qqE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="NH1-G1-iHq"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="LIK-Zf-OER" secondAttribute="bottom" constant="16" id="NS3-0z-a6p"/>
-                    <constraint firstAttribute="bottom" secondItem="rJs-Fb-kdn" secondAttribute="bottom" constant="16" id="VMB-2k-4Xx"/>
-                    <constraint firstItem="tms-1n-j9c" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Zu7-7N-Peq"/>
+                    <constraint firstItem="LIK-Zf-OER" firstAttribute="leading" secondItem="PEH-Fa-qqE" secondAttribute="trailing" constant="16" id="e3w-pp-X7Q"/>
                     <constraint firstAttribute="trailing" secondItem="LIK-Zf-OER" secondAttribute="trailing" constant="16" id="eDY-ED-h2p"/>
-                    <constraint firstItem="rJs-Fb-kdn" firstAttribute="width" secondItem="tms-1n-j9c" secondAttribute="width" id="fdb-x5-FVz"/>
-                    <constraint firstItem="rJs-Fb-kdn" firstAttribute="top" secondItem="tms-1n-j9c" secondAttribute="bottom" constant="12" id="gKf-Hn-zRY"/>
-                    <constraint firstItem="tms-1n-j9c" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="mDg-ox-zbp"/>
+                    <constraint firstAttribute="bottom" secondItem="PEH-Fa-qqE" secondAttribute="bottom" constant="16" id="o9V-py-E63"/>
                     <constraint firstItem="LIK-Zf-OER" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="urM-BY-ezP"/>
-                    <constraint firstItem="rJs-Fb-kdn" firstAttribute="leading" secondItem="tms-1n-j9c" secondAttribute="leading" id="x3u-WQ-znu"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
